--- a/templates/index.html
+++ b/templates/index.html
@@ -361,14 +361,14 @@
                 <!-- Card -->
                 <div class="card">
                     <div class="card-image">
-                        <a href="balcony-room.html"><img class="img-fluid" src="../images/rooms-balcony-room.jpg"
-                                                         alt="alternative"></a>
+                        <a href="t2-corail.html"><img class="img-fluid" src="../images/rooms-balcony-room.jpg"
+                                                      alt="alternative"></a>
                     </div>
                     <div class="card-body">
                         <h3 class="card-title">T2 Corail - 59€/nuit</h3>
                         <p>Notre chambre d'entrée de gamme vous donne accès à toutes les commodités à un prix très abordable.</p>
                         <a class="btn-solid-reg popup-with-move-anim" href="#header-details-lightbox">Réserver</a> <a
-                            class="btn-outline-reg" href="balcony-room.html">Détails</a>
+                            class="btn-outline-reg" href="t2-corail.html">Détails</a>
                     </div>
                 </div>
                 <!-- end of card -->
