specify post method

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -25,7 +25,7 @@
                 <p>.
 
                     <!-- Contact Form -->
-                <form id="contactForm" name="contactForm" data-toggle="validator" data-focus="false" netlify>
+                <form id="contactForm" name="contactForm" data-toggle="validator" data-focus="false" method="post" netlify>
                     <div class="form-group">
                         <input type="text" class="form-control-input" id="cname" name="name" required>
                         <label class="label-control" for="cname">Nom complet</label>
