--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
                 <p>Remplir et envoyer le formulaire pour réserver VillaFleurie</p>
                 <!-- Booking Form -->
                 <!-- autocomplete = off to avoid display problems in mobile view -->
-                <form name="bookingForm" id="bookingForm" data-toggle="validator" data-focus="false" autocomplete="off" netlify>
+                <form name="bookingForm" id="bookingForm" data-toggle="validator" data-focus="false" autocomplete="off" action="/reservation.html" netlify>
                     <div class="form-group">
                         <input type="text" class="form-control-input" id="name" name="name" required>
                         <label class="label-control" for="name">Nom complet</label>
