--- a/templates/contact.html
+++ b/templates/contact.html
@@ -21,7 +21,7 @@
                 <p class="mb-5">Voici l'occasion de nous contacter si vous êtes à la recherche d'une location capable
                     d'offrir une expérience étonnante en termes de confort et de détente <a
                             href="mailto:location.villafleurie@gmail.com">location.villafleurie@gmail.com</a> ou
-                    appelez-nous quand vous le pouvez <a href="tel:+590690441530">+590 690 44 15 30</a></p>
+                    appelez-nous quand vous le pouvez <a href="tel:+33658961279">+33 6 58 96 12 79</a></p>
                 <p>.
 
                     <!-- Contact Form -->
