--- a/templates/contact.html
+++ b/templates/contact.html
@@ -21,8 +21,8 @@
                 <p class="mb-5">Voici l'occasion de nous contacter si vous êtes à la recherche d'une location capable
                     d'offrir une expérience étonnante en termes de confort et de détente <a
                             href="mailto:location.villafleurie@gmail.com">location.villafleurie@gmail.com</a> ou
-                    appelez-nous quand vous le pouvez <a href="tel:+33658961279">+33 6 58 96 12 79</a></p>
-                <p>.
+                    appelez-nous quand vous le pouvez <a href="tel:+33658961279">+33 6 58 96 12 79</a>.</p>
+                <p>
 
                     <!-- Contact Form -->
                 <form id="contactForm" name="contactForm" data-toggle="validator" data-focus="false" method="post" action="/reservation.html"  netlify>
