--- a/templates/t2-corail.html
+++ b/templates/t2-corail.html
@@ -27,8 +27,9 @@
                             <!-- Slide -->
                             <div class="swiper-slide">
                                 <div class="image-container">
-                                    <a class="popup-link" href="../images/room-balcony-1.jpg" data-effect="fadeIn"><img
-                                            class="img-fluid" src="../images/room-balcony-1.jpg" alt="alternative"></a>
+                                    <a class="popup-link" href="../images/villafleurie_t2_chambre.jpg"
+                                       data-effect="fadeIn"><img
+                                            class="img-fluid" src="../images/villafleurie_t2_chambre.jpg" alt="alternative"></a>
                                 </div>
                             </div>
                             <!-- end of slide -->
@@ -36,8 +37,9 @@
                             <!-- Slide -->
                             <div class="swiper-slide">
                                 <div class="image-container">
-                                    <a class="popup-link" href="../images/room-balcony-2.jpg" data-effect="fadeIn"><img
-                                            class="img-fluid" src="../images/room-balcony-2.jpg" alt="alternative"></a>
+                                    <a class="popup-link" href="../images/villafleurie_t2_chambre_2.jpg"
+                                       data-effect="fadeIn"><img
+                                            class="img-fluid" src="../images/villafleurie_t2_chambre_2.jpg" alt="alternative"></a>
                                 </div>
                             </div>
                             <!-- end of slide -->
@@ -45,12 +47,19 @@
                             <!-- Slide -->
                             <div class="swiper-slide">
                                 <div class="image-container">
-                                    <a class="popup-link" href="../images/room-balcony-3.jpg" data-effect="fadeIn"><img
-                                            class="img-fluid" src="../images/room-balcony-3.jpg" alt="alternative"></a>
+                                    <a class="popup-link" href="../images/villafleurie_t2_salon_1_wl81yXI.jpg"
+                                       data-effect="fadeIn"><img
+                                            class="img-fluid" src="../images/villafleurie_t2_salon_1_wl81yXI.jpg" alt="alternative"></a>
                                 </div>
                             </div>
                             <!-- end of slide -->
-
+                            <div class="swiper-slide">
+                                <div class="image-container">
+                                    <a class="popup-link" href="../images/villafleurie_t2_salon_2.jpg"
+                                       data-effect="fadeIn"><img
+                                            class="img-fluid" src="../images/villafleurie_t2_salon_2.jpg" alt="alternative"></a>
+                                </div>
+                            </div>
                         </div> <!-- end of swiper-wrapper -->
 
                         <!-- Add Arrows -->
@@ -136,7 +145,8 @@
                     </li>
                     <li class="media">
                         <i class="fas fa-snowflake"></i>
-                        <div class="media-body"><strong>Climatisation</strong> de pointe spécialement conçue pour créer une température optimale
+                        <div class="media-body"><strong>Climatisation</strong> de pointe spécialement conçue pour créer
+                            une température optimale
                         </div>
                     </li>
                 </ul>
